ci: added basic build CI

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,11 +1,10 @@
-# From: https://tauri.app/v1/guides/building/cross-platform
-
-name: Release
+name: Build
 on:
   push:
-    tags:
-      - 'v*'
-  workflow_dispatch:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+
 
 jobs:
   release:
@@ -44,12 +43,6 @@ jobs:
 
       - name: Build the app
         uses: tauri-apps/tauri-action@v0
-
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tagName: ${{ github.ref_name }} # This only works if your workflow triggers on new tags.
-          releaseName: 'App Name v__VERSION__' # tauri-action replaces \_\_VERSION\_\_ with the app version.
-          releaseBody: 'See the assets to download and install this version.'
-          releaseDraft: true
-          prerelease: false
+
