--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,9 @@ jobs:
           node-version: 'lts/*'
           cache: 'npm'
 
+      - name: Install node dependencies
+        run: npm install
+
       - name: Build the app
         uses: tauri-apps/tauri-action@v0
         env:
