--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -10,14 +10,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.2", features = [] }
+tauri-build = { version = "1.5.1", features = [] }
 
 [dependencies]
-tauri = { version = "1.2", features = ["shell-open", "system-tray"] }
+tauri = { version = "1.6", features = ["shell-open", "system-tray"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
-aw-server = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "dev/tauri" }
-aw-datastore = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "dev/tauri" }
+aw-server = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
+aw-datastore = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
 
 [features]
 # this feature is used for production builds or when `devPath` points to the filesystem
