--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "media"]
-	path = media
-	url = https://github.com/ActivityWatch/media.git
+[submodule "aw-webui"]
+	path = aw-webui
+	url = https://github.com/ActivityWatch/aw-webui.git
