--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,4 +48,6 @@ jobs:
         uses: tauri-apps/tauri-action@v0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          AW_WEBUI_DIR: ${{ github.workspace }}/aw-webui/dist
+
 
