--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,9 @@ jobs:
       - name: Install node dependencies
         run: npm install
 
+      - name: Prebuild
+        run: make prebuild
+
       - name: Build the app
         uses: tauri-apps/tauri-action@v0
         env:
