--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,10 @@ tauri-build = { version = "1.5.1", features = [] }
 tauri = { version = "1.6", features = ["shell-open", "system-tray"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+#[cfg(unix)]
+nix = { version = "0.28.0", features = ["process", "signal"] }
+#[cfg(windows)]
+winapi = { version = "0.3", features = ["winuser"] }
 aw-server = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
 aw-datastore = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
 
