--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -16,6 +16,7 @@ tauri-build = { version = "1.5.1", features = [] }
 tauri = { version = "1.6", features = ["shell-open", "system-tray"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+lazy_static = "1.4"
 #[cfg(unix)]
 nix = { version = "0.28.0", features = ["process", "signal"] }
 #[cfg(windows)]
