--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Install dependencies
-      run: sudo apt-get install libgtk-3-dev
+      run: sudo apt-get update && sudo apt-get install libgtk-3-dev
     - name: Set up Rust nightly
       run: |
         rustup toolchain install nightly
