--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -25,7 +25,20 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Install dependencies
-      run: sudo apt-get update && sudo apt-get install libgtk-3-dev libsoup2.4-dev
+      run: |
+        # From: https://tauri.app/v1/guides/getting-started/prerequisites
+        sudo apt update
+        sudo apt install libwebkit2gtk-4.0-dev \
+            build-essential \
+            curl \
+            wget \
+            file \
+            libssl-dev \
+            libgtk-3-dev \
+            libayatana-appindicator3-dev \
+            libsoup2.4-dev \
+            librsvg2-dev
+
     - name: Set up Rust nightly
       run: |
         rustup toolchain install nightly
