--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -44,6 +44,9 @@ jobs:
         rustup toolchain install nightly
         rustup component add --toolchain nightly clippy
 
+    - name: Install node dependencies
+      run: npm install
+
     - name: Build aw-webui
       run: |
         make build
