--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -47,9 +47,9 @@ jobs:
     - name: Install node dependencies
       run: npm install
 
-    - name: Build aw-webui
+    - name: Build aw-webui and icons
       run: |
-        make build
+        make prebuild
 
     - name: Run clippy
       run: cd src-tauri; cargo clippy
