--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -42,6 +42,12 @@ jobs:
           node-version: 'lts/*'
           cache: 'npm'
 
+      - name: Install node dependencies
+        run: npm install
+
+      - name: Prebuild
+        run: make prebuild
+
       - name: Build the app
         uses: tauri-apps/tauri-action@v0
 
