--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "aw-tauri",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -10,15 +10,15 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "vue": "^3.2.45",
-    "@tauri-apps/api": "^1.2.0"
+    "vue": "^3.3.4",
+    "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-shell": "^2"
   },
   "devDependencies": {
-    "@types/node": "^18.7.10",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "typescript": "^4.9.5",
-    "vite": "^4.2.1",
-    "vue-tsc": "^1.0.11",
-    "@tauri-apps/cli": "^1.2.2"
+    "@vitejs/plugin-vue": "^5.0.5",
+    "typescript": "^5.2.2",
+    "vite": "^5.3.1",
+    "vue-tsc": "^2.0.22",
+    "@tauri-apps/cli": "^2"
   }
 }
