--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -28,15 +28,14 @@ jobs:
       run: |
         # From: https://tauri.app/v1/guides/getting-started/prerequisites
         sudo apt update
-        sudo apt install libwebkit2gtk-4.0-dev \
+        sudo apt install libwebkit2gtk-4.1-dev \
             build-essential \
             curl \
             wget \
             file \
+            libxdo-dev \
             libssl-dev \
-            libgtk-3-dev \
             libayatana-appindicator3-dev \
-            libsoup2.4-dev \
             librsvg2-dev
 
     - name: Set up Rust nightly
