--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,13 +23,17 @@ tauri-build = { version = "2", features = [] }
 tauri = { version = "2", features = ["tray-icon"] }
 tauri-plugin-shell = "2"
 tauri-plugin-dialog = "2"
+
+directories = "5.0"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+toml = "0.8.19"
 lazy_static = "1.4"
 #[cfg(unix)]
 nix = { version = "0.28.0", features = ["process", "signal"] }
 #[cfg(windows)]
 winapi = { version = "0.3", features = ["winuser"] }
+
 aw-server = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
 aw-datastore = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
 
