--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -32,6 +32,9 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 toml = "0.8.19"
 lazy_static = "1.4"
+log = "0.4"
+fern = { version = "0.6", features = ["colored"] }
+chrono = "0.4"
 #[cfg(unix)]
 nix = { version = "0.28.0", features = ["process", "signal"] }
 #[cfg(windows)]
