--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@tauri-apps/plugin-autostart": "2.2.0",
     "@tauri-apps/plugin-dialog": "2.2.0",
     "@tauri-apps/plugin-notification": "2.2.1",
+    "@tauri-apps/plugin-opener": "^2.2.5",
     "@tauri-apps/plugin-shell": "2.2.0"
   },
   "devDependencies": {
