--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -21,7 +21,7 @@ tauri-build = { version = "2.0.5", features = [] }
 
 [dependencies]
 shell-words = "1.1.0"
-tauri = { version = "2.2.2", features = ["tray-icon"] }
+tauri = { version = "2.2.5", features = ["tray-icon"] }
 tauri-plugin-shell = "2.2.0"
 tauri-plugin-dialog = "2.2.0"
 tauri-plugin-notification = "2.2.1"
@@ -30,16 +30,17 @@ tauri-plugin-single-instance = "2.2.1"
 notify = "8.0.0"
 directories = "6.0.0"
 serde = { version = "1.0.217", features = ["derive"] }
-serde_json = "1.0.135"
-toml = "0.8.19"
+serde_json = "1.0.138"
+toml = "0.8.20"
+csv="1.3.1"
 lazy_static = "1.5.0"
 log = "0.4.25"
 fern = { version = "0.7.1", features = ["colored"] }
 chrono = "0.4.39"
 aw-server = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
 aw-datastore = { git = "https://github.com/ActivityWatch/aw-server-rust.git", branch = "master" }
-tauri-plugin-opener = "2"
-tauri-plugin-http = "2"
+tauri-plugin-opener = "2.2.5"
+tauri-plugin-http = "2.3.0"
 [target.'cfg(unix)'.dependencies]
 nix = { version = "0.29.0", features = ["process", "signal"] }
 [target.'cfg(windows)'.dependencies]
