ci: windows arm build

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,8 @@ jobs:
           - platform: 'ubuntu-24.04'
           - platform: 'ubuntu-24.04-arm' # for Arm based linux.
           - platform: 'windows-latest'
+          - platform: 'windows-latest' # for Windows ARM64
+            args: '--target aarch64-pc-windows-msvc'
     runs-on: ${{ matrix.platform }}
 
     steps:
