--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,8 @@ jobs:
           - platform: 'ubuntu-22.04'
           - platform: 'ubuntu-22.04-arm' # for Arm based linux.
           - platform: 'windows-latest'
+          - platform: 'windows-latest' # for Windows ARM64
+            args: '--target aarch64-pc-windows-msvc'
     runs-on: ${{ matrix.platform }}
 
     steps:
@@ -58,6 +60,10 @@ jobs:
 
       - name: Prebuild
         run: make prebuild
+        
+      - name: Add rust target
+        if : matrix.args != null
+        run: rustup target add $(echo "${{ matrix.args }}" | cut -d' ' -f2)
 
       - name: Build the app
         uses: tauri-apps/tauri-action@v0
