maybe adding a target does anything

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
           - platform: 'ubuntu-22.04-arm' # for Arm based linux.
           - platform: 'windows-latest'
           - platform: 'windows-11-arm' # for Windows ARM64
-            # args: '--target aarch64-pc-windows-msvc'
+            args: '--target aarch64-pc-windows-msvc'
     runs-on: ${{ matrix.platform }}
 
     steps:
