--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,7 +28,7 @@ tauri-plugin-notification = "2.2.1"
 tauri-plugin-single-instance = "2.2.1"
 
 notify = "8.0.0"
-directories = "6.0.0"
+appdirs = "0.2.0"
 serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.140"
 toml = "0.8.19"
